NativeStateDrm: Implement swap interval 0
Support non-vsynced rendering in the DRM flavor. Two modes can
be used to avoid vsync:

1. A mailbox-like approach using an internal queue (default).
2. An immediate approach using ASYNC pages flips.

The desired mode can be set with the new --swap-mode command line
parameter.

--- a/doc/glmark2.1.in
+++ b/doc/glmark2.1.in
@@ -27,6 +27,10 @@ Path to glmark2 models, shaders and textures
 \fB\-\-frame-end\fR METHOD
 How to end a frame [default,none,swap,finish,readpixels]
 .TP
+\fB\-\-swap-mode\fR MODE
+How to swap a frame, supported only in the DRM flavor
+[default,mailbox,immediate]
+.TP
 \fB\-\-off-screen\fR
 Render to an off-screen surface
 .TP
