--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,10 +8,30 @@
             // "target" : "AuroraOS-4.0.1.20-base-armv7hl",
             "engine" : "sfdk engine exec",
             "target" : "SailfishOS-4.4.0.58-armv7hl",
-            "datapath" : "/home/defaultuser/Downloads/glmark2/data"
+            "datapath" : "/home/defaultuser/Downloads/glmark2/data",
+            "device" : "defaultuser@192.168.2.19"
         }
     },
     "tasks": [
+        {
+            "label": "Install deps Aurora/Sailfish armv7",
+            "type": "shell",
+            "command": "${engine}",
+            "args": [
+                "sb2",
+                "-t",
+                "${target}",
+                "-R","zypper","in","-y",
+                "libjpeg-turbo-devel",
+                "wayland-devel",
+                "wayland-egl-devel"
+            ],
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        },
         {
             "label": "Configure Aurora/Sailfish armv7",
             "type": "shell",
@@ -66,6 +86,40 @@
                 "kind": "build",
                 "isDefault": true
             }
+        },
+        {
+            "label": "Pull to device",
+            "type": "shell",
+            "command": "rsync",
+            "args": [
+                "-zavP",
+                "build/src/glmark2-es2-wayland",
+                "${device}:/home/defaultuser/Downloads/glmark2/"
+            ],
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        },
+        {
+            "label": "Gdbserver to device",
+            "type": "shell",
+            "command": "ssh",
+            "args": [
+                "${device}",
+                "gdbserver",":10001",
+                "/home/defaultuser/Downloads/glmark2/glmark2-es2-wayland"//,"-d"
+            ],
+            "problemMatcher": [],
+            "dependsOn" : [
+                "Pull to device"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "isBackground": true
         }
     ]
 }
