- set fullscreen option only for desktop file, nut default is 800x600 render buffer

--- a/sailfish/harbour-glmark2.desktop
+++ b/sailfish/harbour-glmark2.desktop
@@ -2,7 +2,7 @@
 Type=Application
 X-Nemo-Application-Type=silica-qt5
 Icon=harbour-glmark2
-Exec=harbour-glmark2
+Exec=harbour-glmark2 --fullscreen
 Name=GLMark2 Benchmark
 Name[en]=GLMark2 Benchmark
 
